legacy/1630/sysdigcloud-kubernetes-1630/sysdigcloud/anchore-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sysdigcloud-anchore-worker
  labels:
    app: sysdigcloud
    role: anchore-worker
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: sysdigcloud
      role: anchore-worker
  template:
    metadata:
      labels:
        app: sysdigcloud
        role: anchore-worker
    spec:
      imagePullSecrets:
        - name: sysdigcloud-pull-secret
      volumes:
        - name: config-volume
          configMap:
            name: sysdigcloud-anchore-worker
        - name: analysis-scratch
          emptyDir: {}
      containers:
      - name: anchore-worker
        image: quay.io/sysdig/anchore:v0.2.4
        imagePullPolicy:
        resources:
          {}
        ports:
        - name: analyzer-api
          containerPort: 8084
        volumeMounts:
        - name: config-volume
          mountPath: /config
        - name: analysis-scratch
          mountPath: /analysis_scratch
        livenessProbe:
          exec:
            command:
            - pgrep
            - twistd
          initialDelaySeconds: 10
          periodSeconds: 60
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /health
            port: analyzer-api
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 10
