legacy/1630/sysdigcloud-kubernetes-1630/sysdigcloud/api-clusterip-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sysdigcloud-api
  labels:
    app: sysdigcloud
    role: api
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: internal-api
  selector:
    app: sysdigcloud
    role: api
