legacy/1630/sysdigcloud-kubernetes-1630/sysdigcloud/collector-nodeport-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sysdigcloud-collector
  labels:
    app: sysdigcloud
    role: collector
spec:
  type: NodePort
  sessionAffinity: ClientIP
  ports:
    - port: 6443
      name: secure-collector
  selector:
    app: sysdigcloud
    role: collector
