legacy/1630/sysdigcloud-kubernetes-1630/sysdigcloud/haproxy-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sysdigcloud-haproxy
  annotations:
    ingress.kubernetes.io/affinity: 'cookie'
  labels:
    app: sysdigcloud
    role: haproxy
spec:
  type: LoadBalancer
  ports:
    - port: 443
      name: https
  selector:
    app: sysdigcloud
    role: haproxy
